@@ -1227,7 +1227,6 @@ public class PersistenceServiceComponent
 	      }
 	    }
 	  } // End of non-dummy persistence
-	  clearMarks(associationsToPersist.iterator());
 	  commitTransaction();
 	  logger.printDot("P");
 	  // Cleanup old deltas and archived snapshots. N.B. The
@@ -1250,7 +1249,9 @@ public class PersistenceServiceComponent
 	  }
 	  logger.printDot("X");
 	  throw e;
-	}
+	} finally {
+	  clearMarks(associationsToPersist.iterator());
+        }
 	objectsThatMightGoAway.clear();
       }
       catch (Exception e) {
